rnsc/test_data/rns_integration/error/parser/type_hints/cp_idx/trailing_tokens.rns
.class public MainClass
.super @cp_idx 42 42 ; explicit constant pool index
